feat: use jwt token for authentication and authorization
