# app/interface/api/server/authenticate.go
@@ -7,6 +7,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/gin-gonic/gin/binding"
 	"github.com/go-playground/validator/v10"
+	"github.com/gotoeveryone/auth-api/app/config"
 	"github.com/gotoeveryone/auth-api/app/domain"
 	"github.com/gotoeveryone/auth-api/app/domain/entity"
 	"github.com/gotoeveryone/auth-api/app/domain/repository"
@@ -15,104 +16,14 @@ import (
 )
 
 type authHandler struct {
-	userRepo  repository.User
-	tokenRepo repository.Token
+	repo repository.User
 }
 
 // NewAuthHandler is create action handler for auth
-func NewAuthHandler(ur repository.User, tr repository.Token) handler.Authenticate {
+func NewAuthHandler(ur repository.User) handler.Authenticate {
 	return &authHandler{
-		userRepo:  ur,
-		tokenRepo: tr,
+		repo: ur,
 	}
-}
-
-// Authenticate is execute authentication by user
-// @Summary Execute authentication by user
-// @Tags Authenticate
-// @Accept  json
-// @Produce json
-// @Param data body entity.Authenticate true "request data"
-// @Success 200 {object} entity.Token
-// @Failure 400 {object} entity.Error
-// @Failure 404 {object} entity.Error
-// @Failure 405 {object} entity.Error
-// @Router /v1/auth [post]
-func (h *authHandler) Authenticate(c *gin.Context) {
-	// Execute validation
-	var input entity.Authenticate
-	if err := c.ShouldBindWith(&input, binding.JSON); err != nil {
-		var verr validator.ValidationErrors
-		if errors.As(err, &verr) {
-			errorBadRequest(c, domain.ValidationErrors(verr, &input))
-			return
-		}
-		errorBadRequest(c, errValidationFailed)
-		return
-	}
-
-	// Search user
-	user, err := h.userRepo.FindByAccount(input.Account)
-	if err != nil {
-		errorInternalServerError(c, err)
-		return
-	}
-
-	// Invalid account
-	if !h.userRepo.ValidUser(user) {
-		errorBadRequest(c, errInvalidAccount)
-		return
-	}
-
-	// When initial password still not changed, Deny authentications
-	if !user.IsActive {
-		errorBadRequest(c, errMustChangePassword)
-		return
-	}
-
-	// Check password matching from user has password
-	if err := h.userRepo.MatchPassword(user.Password, input.Password); err != nil {
-		logrus.Error(err)
-		errorUnauthorized(c, errUnauthorized)
-		return
-	}
-
-	// Create token
-	var token entity.Token
-	if err := h.tokenRepo.Create(user, &token); err != nil {
-		errorInternalServerError(c, err)
-		return
-	}
-
-	// Authenticated
-	if err := h.userRepo.UpdateAuthed(user); err != nil {
-		errorInternalServerError(c, err)
-		return
-	}
-
-	c.JSON(http.StatusOK, token)
-}
-
-// Deauthenticate is execute deauthentication by user
-// @Summary Execute deauthentication by user
-// @Tags Authenticate
-// @Security ApiKeyAuth
-// @Produce json
-// @Success 204
-// @Failure 400 {object} entity.Error
-// @Failure 401 {object} entity.Error
-// @Failure 404 {object} entity.Error
-// @Failure 405 {object} entity.Error
-// @Router /v1/deauth [delete]
-func (h *authHandler) Deauthenticate(c *gin.Context) {
-	// Delete token
-	token := c.GetString(TokenKey)
-	if err := h.tokenRepo.Delete(token); err != nil {
-		errorInternalServerError(c, err)
-		return
-	}
-
-	c.JSON(http.StatusNoContent, gin.H{})
 }
 
 // Registration is execute registration of account
@@ -140,7 +51,7 @@ func (h *authHandler) Registration(c *gin.Context) {
 	}
 
 	// Check the same account already exists
-	if res, err := h.userRepo.Exists(u.Account); err != nil {
+	if res, err := h.repo.Exists(u.Account); err != nil {
 		errorInternalServerError(c, err)
 		return
 	} else if res {
@@ -149,13 +60,13 @@ func (h *authHandler) Registration(c *gin.Context) {
 	}
 
 	// Check valid role
-	if !h.userRepo.ValidRole(u.Role) {
+	if !u.ValidRole() {
 		errorBadRequest(c, errInvalidRole)
 		return
 	}
 
 	// Create user
-	pass, err := h.userRepo.Create(&u)
+	pass, err := h.repo.Create(&u)
 	if err != nil {
 		errorInternalServerError(c, err)
 		return
@@ -197,14 +108,18 @@ func (h *authHandler) Activate(c *gin.Context) {
 	}
 
 	// Search user
-	user, err := h.userRepo.FindByAccount(a.Account)
+	user, err := h.repo.FindByAccount(a.Account)
 	if err != nil {
 		errorInternalServerError(c, err)
 		return
 	}
+	if user == nil {
+		errorUnauthorized(c, errUnauthorized)
+		return
+	}
 
 	// Check password matching from user has password
-	if err := h.userRepo.MatchPassword(user.Password, a.Password); err != nil {
+	if err := h.repo.MatchPassword(user.Password, a.Password); err != nil {
 		logrus.Error(err)
 		errorUnauthorized(c, errUnauthorized)
 		return
@@ -212,7 +127,7 @@ func (h *authHandler) Activate(c *gin.Context) {
 
 	// Enable account with update password
 	user.IsEnable = true
-	if err := h.userRepo.UpdatePassword(user, a.NewPassword); err != nil {
+	if err := h.repo.UpdatePassword(user, a.NewPassword); err != nil {
 		errorInternalServerError(c, err)
 		return
 	}
@@ -220,7 +135,7 @@ func (h *authHandler) Activate(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{})
 }
 
-// GetUser is find user data from token
+// User is find user data from token
 // @Summary Return authenticated user
 // @Tags Authenticate
 // @Security ApiKeyAuth
@@ -229,27 +144,10 @@ func (h *authHandler) Activate(c *gin.Context) {
 // @Failure 401 {object} entity.Error
 // @Failure 404 {object} entity.Error
 // @Failure 405 {object} entity.Error
-// @Router /v1/users [get]
-func (h *authHandler) GetUser(c *gin.Context) {
-	// Find user from post token
-	token := c.GetString(TokenKey)
-	var t entity.Token
-	if err := h.tokenRepo.Find(token, &t); err != nil {
-		errorInternalServerError(c, err)
-		return
-	}
+// @Router /v1/me [get]
+func (h *authHandler) User(c *gin.Context) {
+	identity, _ := c.Get(config.IdentityKey)
+	user := *identity.(*entity.User)
 
-	var u entity.User
-	if err := h.userRepo.Find(t.UserID, &u); err != nil {
-		errorInternalServerError(c, err)
-		return
-	}
-
-	// Invalid account
-	if !h.userRepo.ValidUser(&u) {
-		errorBadRequest(c, errInvalidAccount)
-		return
-	}
-
-	c.JSON(http.StatusOK, u)
+	c.JSON(http.StatusOK, user)
 }
