# docs/swagger.json
@@ -91,16 +91,13 @@
         },
         "/v1/auth": {
             "post": {
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Authenticate"
                 ],
-                "summary": "Execute authentication by user",
+                "summary": "Execute authentication for user",
                 "parameters": [
                     {
                         "description": "request data",
@@ -116,13 +113,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.Token"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/entity.Error"
+                            "$ref": "#/definitions/entity.Claim"
                         }
                     },
                     "404": {
@@ -153,22 +144,10 @@
                 "tags": [
                     "Authenticate"
                 ],
-                "summary": "Execute deauthentication by user",
+                "summary": "Execute deauthentication for user",
                 "responses": {
                     "204": {
                         "description": ""
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/entity.Error"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/entity.Error"
-                        }
                     },
                     "404": {
                         "description": "Not Found",
@@ -185,7 +164,7 @@
                 }
             }
         },
-        "/v1/users": {
+        "/v1/me": {
             "get": {
                 "security": [
                     {
@@ -225,7 +204,45 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/v1/refresh_token": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authenticate"
+                ],
+                "summary": "Publish refresh token for user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.Claim"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/entity.Error"
+                        }
+                    },
+                    "405": {
+                        "description": "Method Not Allowed",
+                        "schema": {
+                            "$ref": "#/definitions/entity.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/users": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -319,6 +336,17 @@
                 }
             }
         },
+        "entity.Claim": {
+            "type": "object",
+            "properties": {
+                "expire": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
         "entity.Error": {
             "type": "object",
             "properties": {
@@ -350,20 +378,6 @@
                 },
                 "timezone": {
                     "type": "string"
-                }
-            }
-        },
-        "entity.Token": {
-            "type": "object",
-            "properties": {
-                "accessToken": {
-                    "type": "string"
-                },
-                "environment": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
                 }
             }
         },
